// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dashboard /> renders correctly all inputs being empty 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 80%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 60px 90px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 70px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 h1 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  font-weight: bold;
  font-size: 28px;
  color: black;
  margin: 0;
}

.c2 hr {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  height: 0;
  border: 4px solid #8ed663;
  margin-left: 20px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 20%;
  height: auto;
  background: rgba(142,214,99,0.17);
  padding: 60px;
}

.c4 h5 {
  font-weight: bold;
  font-size: 20px;
  line-height: 70px;
  color: black;
  margin: 0;
}

.c4 h6 {
  font-weight: bold;
  font-size: 16px;
  line-height: 40px;
  color: black;
  margin: 0;
}

.c5 {
  font-weight: bold;
  font-size: 12px;
  line-height: 24px;
  color: black;
}

.c5 input[type='checkbox'] {
  vertical-align: middle;
  margin-right: 10px;
  cursor: pointer;
}

.c5 input[type='checkbox']:before {
  content: '';
  position: absolute;
  width: 13px;
  height: 13px;
  border-radius: 2px;
  border: 2px solid black;
  background-color: white;
}

.c5 input[type='checkbox']:checked:after {
  content: '';
  position: absolute;
  width: 13px;
  height: 13px;
  border-radius: 2px;
  border: 2px solid black;
  background-color: black;
}

.c5 label {
  display: block;
  margin-top: -24px;
  margin-left: 20px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div>
      <div
        className="c2"
      >
        <h1>
          Undergraduate Majors
        </h1>
        <hr />
      </div>
      <div
        className="c3"
      />
    </div>
    <div>
      <div
        className="c2"
      >
        <h1>
          Undergraduate Minors
        </h1>
        <hr />
      </div>
      <div
        className="c3"
      />
    </div>
    <div>
      <div
        className="c2"
      >
        <h1>
          Graduate Studies
        </h1>
        <hr />
      </div>
      <div
        className="c3"
      />
    </div>
  </div>
  <div
    className="c4"
  >
    <h5>
      Apply Tags
    </h5>
    <h6>
      Design Areas
    </h6>
    <form
      className="c5"
    />
    <h6>
      Schools
    </h6>
    <form
      className="c5"
    />
  </div>
</div>
`;

exports[`<Dashboard /> renders correctly with mix of empty and non-empty input 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 80%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  padding: 60px 90px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  height: 70px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 h1 {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  font-weight: bold;
  font-size: 28px;
  color: black;
  margin: 0;
}

.c2 hr {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  height: 0;
  border: 4px solid #8ed663;
  margin-left: 20px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  width: 287px;
  margin-bottom: 38px;
}

.c4 h1 {
  font-weight: bold;
  font-size: 16px;
  color: black;
  cursor: pointer;
}

.c5 {
  background: white;
  font-size: 13px;
  color: #898989;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 20%;
  height: auto;
  background: rgba(142,214,99,0.17);
  padding: 60px;
}

.c6 h5 {
  font-weight: bold;
  font-size: 20px;
  line-height: 70px;
  color: black;
  margin: 0;
}

.c6 h6 {
  font-weight: bold;
  font-size: 16px;
  line-height: 40px;
  color: black;
  margin: 0;
}

.c7 {
  font-weight: bold;
  font-size: 12px;
  line-height: 24px;
  color: black;
}

.c7 input[type='checkbox'] {
  vertical-align: middle;
  margin-right: 10px;
  cursor: pointer;
}

.c7 input[type='checkbox']:before {
  content: '';
  position: absolute;
  width: 13px;
  height: 13px;
  border-radius: 2px;
  border: 2px solid black;
  background-color: white;
}

.c7 input[type='checkbox']:checked:after {
  content: '';
  position: absolute;
  width: 13px;
  height: 13px;
  border-radius: 2px;
  border: 2px solid black;
  background-color: black;
}

.c7 label {
  display: block;
  margin-top: -24px;
  margin-left: 20px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div>
      <div
        className="c2"
      >
        <h1>
          Undergraduate Majors
        </h1>
        <hr />
      </div>
      <div
        className="c3"
      >
        <div
          className="c4"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <h1>
            Major Title
          </h1>
          <span
            className="c5"
          >
            Engineering. 
          </span>
        </div>
        <div
          className="c4"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <h1>
            Major Two
          </h1>
          <span
            className="c5"
          >
            Engineering. 
          </span>
        </div>
      </div>
    </div>
    <div>
      <div
        className="c2"
      >
        <h1>
          Undergraduate Minors
        </h1>
        <hr />
      </div>
      <div
        className="c3"
      >
        <div
          className="c4"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <h1>
            Major Title
          </h1>
          <span
            className="c5"
          >
            Engineering. 
          </span>
        </div>
      </div>
    </div>
    <div>
      <div
        className="c2"
      >
        <h1>
          Graduate Studies
        </h1>
        <hr />
      </div>
      <div
        className="c3"
      />
    </div>
  </div>
  <div
    className="c6"
  >
    <h5>
      Apply Tags
    </h5>
    <h6>
      Design Areas
    </h6>
    <form
      className="c7"
    >
      <div>
        <input
          id="Tag1"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="Tag1"
        >
          Tag1
        </label>
      </div>
      <div>
        <input
          id="Tag2"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="Tag2"
        >
          Tag2
        </label>
      </div>
      <div>
        <input
          id="Tag3"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          htmlFor="Tag3"
        >
          Tag3
        </label>
      </div>
    </form>
    <h6>
      Schools
    </h6>
    <form
      className="c7"
    />
  </div>
</div>
`;
